--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a href="single-category.html">
 
 
-           <div id="specials-tile"><span>specials</span></div>
+           <div id="specials-tile"><span style="display: none;"></div>
         </a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
